--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
   },
-  "include": ["src"],
+  "include": ["src", "./src/setupTest.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
